# mediaskinoscope

./: README.md  demo.py  main.py  pyproject.toml  vec_indexer.py  vec_retriever.py
demo/: demo.py
demo/vector_index/: derma_labels.txt
vector_index/: derma.index
